--- a/src/components/wish-list-item/wish-list-item.styles.scss
+++ b/src/components/wish-list-item/wish-list-item.styles.scss
@@ -1,6 +1,6 @@
 .wish-list-item-container {
   display: flex;
-  // background: pink;
+
   border-bottom: 1px dotted rgb(225, 225, 225);
   padding: 2rem 0;
 
@@ -14,7 +14,7 @@
 
     .img1 {
       width: 100%;
-      // height: 100%;
+
       position: absolute;
       top: 0;
       left: 0;
@@ -23,7 +23,6 @@
     .img2 {
       z-index: 9;
       width: 100%;
-      // height: 100%;
     }
 
     .slide-out-top {
@@ -60,7 +59,6 @@
   }
 
   .wish-list-item-details {
-    // background: pink;
     color: #27160e;
     display: block;
     flex: 70%;
@@ -82,12 +80,13 @@
 
   .wish-item-to-cart {
     align-self: center;
-    margin-left: 2rem;
+
     button {
-      padding: 15px;
+      padding: 17px 15px 15px 17px;
       border: none;
-      background-color: #47160e;
+      // background-color: #47160e;
       cursor: pointer;
+
       img {
         width: 23px;
       }
