--- a/src/components/shopping-cart-item-order/shopping-cart-item-order.styles.scss
+++ b/src/components/shopping-cart-item-order/shopping-cart-item-order.styles.scss
@@ -15,14 +15,20 @@
     align-self: flex-end;
     border: none;
     cursor: pointer;
+   
 
     &:hover {
       transform: scale(1.3);
     }
+
+    .delete-btn {
+      width: 25px;
+     
+    }
   }
 
   .cart-item-bag-heart-container {
-    width: 38px;
+    width: 25px;
     button {
       border: none;
     }
@@ -47,9 +53,7 @@
         font-size: 18px;
         font-weight: 400;
       }
-      .item-description {
-        // background: red;
-      }
+  
       .item-taste {
         color: #a8a8a8;
       }
