--- a/src/components/favorite-icon/favorite-icon.styles.scss
+++ b/src/components/favorite-icon/favorite-icon.styles.scss
@@ -6,6 +6,7 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  padding-top: 1.9px;
 
   .item-count {
     position: absolute;
