--- a/src/routes/success/success.styles.styles.scss
+++ b/src/routes/success/success.styles.styles.scss
@@ -5,8 +5,8 @@
   text-align: center;
 
   img {
-    height: 80%;
-    width: 600px;
+    height: 100%;
+    width: 100%;
     padding: 5px;
     border: 1px solid #532c12;
   }
@@ -16,7 +16,7 @@
     color: white;
     position: absolute;
     top: 20%;
-    left: 60%;
+    left: 50%;
     width: 100%;
     transform: translate(-50%, -50%);
     font-size: 2rem;
@@ -27,7 +27,7 @@
 
   h3 {
     top: 10%;
-    left: 60%;
+    // left: 60%;
     font-size: 1rem;
   }
 }
